# git-dibs-sdk

./: .gitignore  README.md  pyproject.toml
.github/workflows/: publish.yml  test.yml
src/git_dibs_sdk/: __init__.py  client.py
tests/: test_client.py
